src/tests/krate/snapshots/crates_io__tests__krate__yanking__patch_version_yank_unyank-2.snap
---
source: src/tests/krate/yanking.rs
expression: json
snapshot_kind: text
---
{
  "version": {
    "id": 1,
    "crate": "patchable",
    "num": "1.0.0",
    "dl_path": "/api/v1/crates/patchable/1.0.0/download",
    "readme_path": "/api/v1/crates/patchable/1.0.0/readme",
    "updated_at": "[datetime]",
    "created_at": "[datetime]",
    "downloads": 0,
    "features": {},
    "yanked": true,
    "yank_message": "Yanking reason",
    "lib_links": null,
    "license": "MIT",
    "links": {
      "dependencies": "/api/v1/crates/patchable/1.0.0/dependencies",
      "version_downloads": "/api/v1/crates/patchable/1.0.0/downloads",
      "authors": "/api/v1/crates/patchable/1.0.0/authors"
    },
    "crate_size": 151,
    "published_by": {
      "id": 1,
      "login": "foo",
      "username": "foo",
      "name": null,
      "avatar": null,
      "url": "https://github.com/foo"
    },
    "audit_actions": [
      {
        "action": "publish",
        "user": {
          "id": 1,
          "login": "foo",
          "username": "foo",
          "name": null,
          "avatar": null,
          "url": "https://github.com/foo"
        },
        "time": "[datetime]"
      },
      {
        "action": "yank",
        "user": {
          "id": 1,
          "login": "foo",
          "username": "foo",
          "name": null,
          "avatar": null,
          "url": "https://github.com/foo"
        },
        "time": "[datetime]"
      }
    ],
    "checksum": "ddfc395ab340f413ee1d1ed0afce51a7c9df1c99c551fed5aef76edd4abe4048",
    "rust_version": null,
    "has_lib": false,
    "bin_names": [],
    "edition": null,
    "description": "description",
    "homepage": null,
    "documentation": null,
    "repository": null
  }
}
